<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="24dp"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/orderTV"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Заказ" />

                <EditText
                    android:id="@+id/nameET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name" />

                <EditText
                    android:id="@+id/emailET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"/>

                <EditText
                    android:id="@+id/phoneET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:hint="@string/phone" />

                <EditText
                    android:id="@+id/streetET"
                    android:layout_width="match_parent"

                    android:layout_height="wrap_content"
                    android:hint="@string/street" />

                <EditText
                    android:id="@+id/houseET"
                    android:layout_width="match_parent"

                    android:layout_height="wrap_content"
                    android:hint="@string/house" />

                <EditText
                    android:id="@+id/flatET"
                    android:layout_width="match_parent"

                    android:layout_height="wrap_content"
                    android:hint="@string/flat" />

                <Spinner
                    android:id="@+id/payType"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <EditText
                    android:id="@+id/commentET"
                    android:layout_width="match_parent"

                    android:layout_height="wrap_content"
                    android:hint="@string/comment" />

                <EditText
                    android:id="@+id/countPersonsET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"

                    android:hint="@string/countPersons" />

                <EditText
                    android:id="@+id/countItemsET"
                    android:layout_width="match_parent"

                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:hint="@string/countItems" />

                <Button
                    android:id="@+id/addButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sendOrder" />
            </LinearLayout>
        </ScrollView>
    </RelativeLayout>
</android.support.constraint.ConstraintLayout>